--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2190,6 +2190,7 @@ SUBDIR+=	re2c
 SUBDIR+=	readline
 SUBDIR+=	rebar
 SUBDIR+=	refinecvs
+SUBDIR+=	rematch
 SUBDIR+=	reposurgeon
 SUBDIR+=	ropper
 SUBDIR+=	roundup
