youtube-dl requires py-expat to use ElementTree

--- a/net/youtube-dl/Makefile
+++ b/net/youtube-dl/Makefile
@@ -14,6 +14,8 @@ HOMEPAGE=	https://ytdl-org.github.io/youtube-dl/
 COMMENT=	Download videos from youtube.com
 LICENSE=	public-domain
 
+DEPENDS+=	${PYPKGPREFIX}-expat-[0-9]*:../../textproc/py-expat
+
 USE_LANGUAGES=	# none
 EGG_NAME=	youtube_dl-${VERSION_DATE:S/.0/./g}
 WRKSRC=		${WRKDIR}/youtube-dl
