Do not install py34-expat, which is redundant

--- a/textproc/py-expat/Makefile
+++ b/textproc/py-expat/Makefile
@@ -16,6 +16,7 @@ PY_PATCHPLIST=	yes
 PY_SETUP_SUBST+= EXPATPREFIX=${BUILDLINK_DIR}
 PY_SETUP_SUBST+= EXPATRTPREFIX=${BUILDLINK_PREFIX.expat}
 
+PLIST_VARS+=	framework
 PYSETUPINSTALLARGS+=	--install-lib ${PREFIX}/${PYLIB}/lib-dynload
 
 # ignore errors due to missing files (EXTRACT_ELEMENTS!)
@@ -26,6 +27,16 @@ do-patch:
 	done)
 
 .include "../../textproc/expat/buildlink3.mk"
+.include "../../lang/python/pyversion.mk"
+.if ${PYVERSSUFFIX} == "3.4"
+NO_BUILD=	yes
+NO_CONFIGURE=	yes
+
+do-install:
+	${TRUE}
+.else
+PLIST.framework = yes
 .include "../../lang/python/extension.mk"
+.endif
 .include "../../lang/python/srcdist.mk"
 .include "../../mk/bsd.pkg.mk"
