Import clang-bin-5.0.0 for OS X

--- a/lang/Makefile
+++ b/lang/Makefile
@@ -28,6 +28,7 @@ SUBDIR+=	chicken5
 SUBDIR+=	cim
 SUBDIR+=	cint
 SUBDIR+=	clang
+SUBDIR+=	clang-bin
 SUBDIR+=	clang-static-analyzer
 SUBDIR+=	clang-tools-extra
 SUBDIR+=	classpath
