Add a workaround for a sed error in python34
Lib/test/badsyntax_pep3120.py causes an "illegal byte sequence" error
in running sed.

--- a/lang/python34/Makefile
+++ b/lang/python34/Makefile
@@ -105,7 +105,7 @@ INSTALL_TARGET=	altinstall
 REPLACE_INTERPRETER+=	py34
 REPLACE.py34.old=	.*python[^ ]*
 REPLACE.py34.new=	${PREFIX}/bin/python${PY_VER_SUFFIX}
-REPLACE_FILES.py34=	Lib/*.py Lib/*/*.py Lib/*/*/*.py Lib/*/*/*/*.py Mac/Tools/*.py
+REPLACE_FILES.py34=	Lib/*.py Lib/encodings/*.py Lib/idlelib/*.py Lib/*/*/*.py Lib/*/*/*/*.py Mac/Tools/*.py
 
 SUBST_CLASSES+=		findlib
 SUBST_MESSAGE.findlib=	Fixing find_library_file on Darwin.
