Import lua-lsqlite3

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -84,6 +84,7 @@ SUBDIR+=	libpqxx
 SUBDIR+=	libzdb
 SUBDIR+=	liquibase
 SUBDIR+=	lmdb
+SUBDIR+=	lua-lsqlite3
 SUBDIR+=	lua-sql-mysql
 SUBDIR+=	lua-sql-postgres
 SUBDIR+=	lua-sql-sqlite
