Add a workaround for a sed error in python35

--- a/lang/python36/Makefile
+++ b/lang/python36/Makefile
@@ -145,6 +145,7 @@ REPLACE_FILES.python+=	Lib/turtledemo/tree.py
 REPLACE_FILES.python+=	Lib/turtledemo/yinyang.py
 REPLACE_FILES.python+=	Lib/uu.py
 REPLACE_FILES.python+=	Lib/webbrowser.py
+REPLACE_FILES.python+=	Mac/Tools/*.py
 
 # XXX: It might be needed to add manually more paths like ${PREFIX}/qt5/lib
 # Test: python -c 'from ctypes.util import find_library; print(find_library("ffi"));'
