Import thrift-0.9.3 into devel/thrift

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2444,6 +2444,7 @@ SUBDIR+=	tex-pst-uml-doc
 SUBDIR+=	tex-xifthen
 SUBDIR+=	tex-xifthen-doc
 SUBDIR+=	threadweaver
+SUBDIR+=	thrift
 SUBDIR+=	tig
 SUBDIR+=	tinycthread
 SUBDIR+=	tkcvs
