--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2445,6 +2445,7 @@ SUBDIR+=	tex-xifthen
 SUBDIR+=	tex-xifthen-doc
 SUBDIR+=	threadweaver
 SUBDIR+=	thrift
+SUBDIR+=	thrift-cpp
 SUBDIR+=	tig
 SUBDIR+=	tinycthread
 SUBDIR+=	tkcvs
