Import thrift-cpp-0.9.3

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2464,6 +2464,7 @@ SUBDIR+=	tex-xifthen
 SUBDIR+=	tex-xifthen-doc
 SUBDIR+=	threadweaver
 SUBDIR+=	thrift
+SUBDIR+=	thrift-cpp
 SUBDIR+=	tig
 SUBDIR+=	tinycthread
 SUBDIR+=	tkcvs
