--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2827,6 +2827,7 @@ SUBDIR+=	tex-xifthen
 SUBDIR+=	tex-xifthen-doc
 SUBDIR+=	threadweaver
 SUBDIR+=	thrift
+SUBDIR+=	thrift-cpp
 SUBDIR+=	tig
 SUBDIR+=	tinycthread
 SUBDIR+=	tkcon
