Do not check missing libraries for libre2
The check fails with the following error:

ERROR: lib/libre2.0.0.0.dylib: missing library: @rpath/libre2.0.dylib

--- a/devel/re2/Makefile
+++ b/devel/re2/Makefile
@@ -21,4 +21,6 @@ SUBST_SED.path=		-e 's|/usr/local|${PREFIX}|g'
 
 CXXFLAGS+=	-O3
 
+CHECK_SHLIBS_SKIP=	lib/libre2*.dylib
+
 .include "../../mk/bsd.pkg.mk"
