Update sniffles to 3.3.0
- Drop support of python33 in sniffles
- Switch sniffles from python34 to python35

--- a/net/sniffles/Makefile
+++ b/net/sniffles/Makefile
@@ -1,17 +1,17 @@
 # $NetBSD$
 
-DISTNAME=	sniffles-3.1.1
+DISTNAME=	sniffles-3.3.0
 CATEGORIES=	net
 MASTER_SITES=	file:///usr/pkgsrc/distfiles/
 
 MAINTAINER=	minskim@NetBSD.org
-HOMEPAGE=	file:///usr/pkgsrc/distfiles/
+HOMEPAGE=	https://github.com/petabi/sniffles
 COMMENT=	Packet capture generator for IDS evaluation
 
 DEPENDS+=	${PYPKGPREFIX}-sortedcontainers-[0-9]*:../../devel/py-sortedcontainers
 
 PYDISTUTILSPKG=			yes
-PYTHON_VERSIONS_ACCEPTED=	34 33
+PYTHON_VERSIONS_ACCEPTED=	35 34
 
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
