Import metasploit-framework-4.11.5

--- a/security/Makefile
+++ b/security/Makefile
@@ -193,6 +193,7 @@ SUBDIR+=	mcrypt
 SUBDIR+=	md4-collision
 SUBDIR+=	md5-collision
 SUBDIR+=	merkletree
+SUBDIR+=	metasploit-framework
 SUBDIR+=	mhash
 SUBDIR+=	mirrordir
 SUBDIR+=	mit-krb5
