Import ruby-metasploit_data_models-2.0.0

--- a/security/Makefile
+++ b/security/Makefile
@@ -464,6 +464,7 @@ SUBDIR+=	ruby-jsobfu
 SUBDIR+=	ruby-metasploit-concern
 SUBDIR+=	ruby-metasploit-model
 SUBDIR+=	ruby-metasploit-payloads
+SUBDIR+=	ruby-metasploit_data_models
 SUBDIR+=	ruby-metasploit_payloads-mettle
 SUBDIR+=	ruby-net-scp
 SUBDIR+=	ruby-net-sftp
