Import ruby-metasploit-credential-2.0.3

--- a/security/Makefile
+++ b/security/Makefile
@@ -466,6 +466,7 @@ SUBDIR+=	ruby-ezcrypto
 SUBDIR+=	ruby-hmac
 SUBDIR+=	ruby-jsobfu
 SUBDIR+=	ruby-metasploit-concern
+SUBDIR+=	ruby-metasploit-credential
 SUBDIR+=	ruby-metasploit-model
 SUBDIR+=	ruby-metasploit-payloads
 SUBDIR+=	ruby-metasploit_data_models
