Import ruby-packetfu-1.1.11

--- a/net/Makefile
+++ b/net/Makefile
@@ -779,6 +779,7 @@ SUBDIR+=	ruby-netaddr
 SUBDIR+=	ruby-netrc
 SUBDIR+=	ruby-network_interface
 SUBDIR+=	ruby-nio4r
+SUBDIR+=	ruby-packetfu
 SUBDIR+=	ruby-pcaprub
 SUBDIR+=	ruby-pluggaloid
 SUBDIR+=	ruby-proxifier
