Import ruby-packetfu-1.1.11

--- a/net/Makefile
+++ b/net/Makefile
@@ -735,6 +735,7 @@ SUBDIR+=	ruby-net-telnet
 SUBDIR+=	ruby-netaddr
 SUBDIR+=	ruby-netrc
 SUBDIR+=	ruby-network_interface
+SUBDIR+=	ruby-packetfu
 SUBDIR+=	ruby-pcaprub
 SUBDIR+=	ruby-pluggaloid
 SUBDIR+=	ruby-proxifier
