Import ruby-rex-registry-0.1.0

--- a/security/Makefile
+++ b/security/Makefile
@@ -481,6 +481,7 @@ SUBDIR+=	ruby-rc4
 SUBDIR+=	ruby-rex-java
 SUBDIR+=	ruby-rex-powershell
 SUBDIR+=	ruby-rex-random_identifier
+SUBDIR+=	ruby-rex-registry
 SUBDIR+=	ruby-rex-struct2
 SUBDIR+=	ruby-rex-text
 SUBDIR+=	ruby-ruby-openid
