--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2327,6 +2327,7 @@ SUBDIR+=	ruby-railties42
 SUBDIR+=	ruby-randexp
 SUBDIR+=	ruby-rb-fsevent
 SUBDIR+=	ruby-rb-kqueue
+SUBDIR+=	ruby-rb-readline-r7
 SUBDIR+=	ruby-rbtree
 SUBDIR+=	ruby-rcsparse
 SUBDIR+=	ruby-rd-mode
