Import ruby-rb-readline-r7-0.5.2.0

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2308,6 +2308,7 @@ SUBDIR+=	ruby-railties42
 SUBDIR+=	ruby-randexp
 SUBDIR+=	ruby-rb-fsevent
 SUBDIR+=	ruby-rb-kqueue
+SUBDIR+=	ruby-rb-readline-r7
 SUBDIR+=	ruby-rbtree
 SUBDIR+=	ruby-rcsparse
 SUBDIR+=	ruby-rd-mode
