Import ruby-cucumber-2.4.0

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2570,6 +2570,7 @@ SUBDIR+=	ruby-classy_hash
 SUBDIR+=	ruby-cmd
 SUBDIR+=	ruby-concurrent-ruby
 SUBDIR+=	ruby-contracts
+SUBDIR+=	ruby-cucumber
 SUBDIR+=	ruby-cucumber-core
 SUBDIR+=	ruby-cucumber-expressions
 SUBDIR+=	ruby-cucumber-messages
