Fix permission in ruby-robots

--- a/www/ruby-robots/Makefile
+++ b/www/ruby-robots/Makefile
@@ -7,5 +7,8 @@ MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	http://github.com/fizx/robots
 COMMENT=	Parser for robots.txt
 
+post-extract:
+	${CHMOD} -R a+r ${WRKSRC}
+
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
