Import auto-opt-0.2.1

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -65,6 +65,7 @@ SUBDIR+=	at-spi2-core
 SUBDIR+=	atf
 SUBDIR+=	atk
 SUBDIR+=	atkmm
+SUBDIR+=	auto-opt
 SUBDIR+=	autoconf
 SUBDIR+=	autoconf-archive
 SUBDIR+=	autoconf213
