Update rematch to 0.16

--- a/devel/rematch/Makefile
+++ b/devel/rematch/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	rematch-1.5
+DISTNAME=	rematch-1.6
 CATEGORIES=	devel
 MASTER_SITES=	# None
 EXTRACT_SUFX=	.tar.bz2
@@ -16,6 +16,7 @@ CMAKE_ARGS=	-DCMAKE_BUILD_TYPE=Release
 
 BUILDLINK_DEPMETHOD.atf?=	build
 BUILDLINK_DEPMETHOD.llvm?=	build
+BUILDLINK_API_DEPENDS.pius-session+=	pius-session>=0.21.0
 
 .include "../../benchmarks/google-benchmark/buildlink3.mk"
 .include "../../devel/atf/buildlink3.mk"
