Fix security/botan-devel's PLIST on Darwin
locking_allocator is not supported on Darwin.
See src/lib/utils/locking_allocator/info.txt.

--- a/security/botan-devel/Makefile
+++ b/security/botan-devel/Makefile
@@ -47,6 +47,10 @@ MAKE_FLAGS+=	LIB_OPT=${CXXFLAGS:Q}
 
 USE_TOOLS+=	gmake
 
+PLIST_VARS+=	locking_allocator
+.if ${OPSYS} != "Darwin"
+PLIST.locking_allocator=	yes
+.endif
 PY_PATCHPLIST=	yes
 
 LDFLAGS.SunOS+=	-lnsl -lsocket
