--- a/net/Makefile
+++ b/net/Makefile
@@ -586,6 +586,7 @@ SUBDIR+=	php-xmlrpc
 SUBDIR+=	php-yaz
 SUBDIR+=	pim6dd
 SUBDIR+=	pim6sd
+SUBDIR+=	pius-arp
 SUBDIR+=	pload
 SUBDIR+=	podcastdl
 SUBDIR+=	poink
