Let hyperscan build shared libs rather than static

--- a/devel/hyperscan/Makefile
+++ b/devel/hyperscan/Makefile
@@ -1,6 +1,7 @@
 # $NetBSD$
 
 DISTNAME=	hyperscan-4.4.1
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=01org/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -12,11 +13,12 @@ LICENSE=	modified-bsd
 
 BUILD_DEPENDS+=	ragel-[0-9]*:../../devel/ragel
 
-WRKSRC=		${WRKDIR}/${PKGNAME}
+WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}
 USE_CMAKE=	yes
 USE_TOOLS+=	pkg-config
 USE_LANGUAGES=	c c++
 
+CMAKE_ARGS+=		-DBUILD_SHARED_LIBS=ON
 PKGCONFIG_OVERRIDE+=	libhs.pc.in
 
 .include "../../databases/sqlite3/buildlink3.mk"
