--- a/devel/hyperscan/Makefile
+++ b/devel/hyperscan/Makefile
@@ -1,7 +1,6 @@
 # $NetBSD$
 
-DISTNAME=	hyperscan-4.4.1
-PKGREVISION=	1
+DISTNAME=	hyperscan-4.5.1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=01org/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -16,7 +15,7 @@ BUILD_DEPENDS+=	ragel-[0-9]*:../../devel/ragel
 WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}
 USE_CMAKE=	yes
 USE_TOOLS+=	pkg-config
-USE_LANGUAGES=	c c++
+USE_LANGUAGES=	c99 c++11
 
 CMAKE_ARGS+=		-DBUILD_SHARED_LIBS=ON
 PKGCONFIG_OVERRIDE+=	libhs.pc.in
