--- a/devel/hdf5/Makefile.common
+++ b/devel/hdf5/Makefile.common
@@ -2,9 +2,9 @@
 # used by devel/hdf5/Makefile
 # used by devel/hdf5-c++/Makefile
 
-DISTNAME=	hdf5-1.8.18
+DISTNAME=	hdf5-1.10.1
 CATEGORIES=	devel
-MASTER_SITES=	ftp://ftp.hdfgroup.org/HDF5/current18/src/
+MASTER_SITES=	https://support.hdfgroup.org/ftp/HDF5/current/src/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
