Import py-pyfolio-0.8.0

--- a/finance/Makefile
+++ b/finance/Makefile
@@ -22,6 +22,7 @@ SUBDIR+=	py-braintree
 SUBDIR+=	py-empyrical
 SUBDIR+=	py-fecon235
 SUBDIR+=	py-ofxparse
+SUBDIR+=	py-pyfolio
 SUBDIR+=	py-python-bitcoinlib
 SUBDIR+=	py-quickbooks
 SUBDIR+=	py-stripe
