--- a/net/tcpreplay/Makefile
+++ b/net/tcpreplay/Makefile
@@ -1,6 +1,6 @@
 # $NetBSD: Makefile,v 1.22 2013/10/31 02:25:16 minskim Exp $
 
-DISTNAME=	tcpreplay-3.4.4
+DISTNAME=	tcpreplay-4.2.6
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=tcpreplay/}
 
@@ -13,8 +13,9 @@ BUILDLINK_API_DEPENDS.libpcap+=	libpcap>=0.8.0
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
 
-CONFIGURE_ARGS+=	--enable-dynamic-link
 CONFIGURE_ARGS+=	--with-libpcap=${BUILDLINK_PREFIX.libpcap}
+CONFIGURE_ENV+=		ac_cv_lib_dbus_1_dbus_malloc=no
 
+.include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../net/libpcap/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
