--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2380,6 +2380,7 @@ SUBDIR+=	py-quixote
 SUBDIR+=	py-radon
 SUBDIR+=	py-random2
 SUBDIR+=	py-rauth
+SUBDIR+=	py-re3
 SUBDIR+=	py-readlike
 SUBDIR+=	py-readline
 SUBDIR+=	py-rednose
