Import py-pyarrow

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -2279,6 +2279,7 @@ SUBDIR+=	py-proteus
 SUBDIR+=	py-protobuf
 SUBDIR+=	py-py
 SUBDIR+=	py-py2app
+SUBDIR+=	py-pyarrow
 SUBDIR+=	py-pydispatcher
 SUBDIR+=	py-pyelftools
 SUBDIR+=	py-pygit2
