Import apache-parquet-cpp

--- a/devel/Makefile
+++ b/devel/Makefile
@@ -96,6 +96,7 @@ SUBDIR+=	apache-ant19
 SUBDIR+=	apache-arrow-c++
 SUBDIR+=	apache-ivy
 SUBDIR+=	apache-maven
+SUBDIR+=	apache-parquet-cpp
 SUBDIR+=	apel
 SUBDIR+=	apenwarr-redo
 SUBDIR+=	appdata-tools
