--- a/math/Makefile
+++ b/math/Makefile
@@ -26,6 +26,7 @@ SUBDIR+=	R-RcmdrMisc
 SUBDIR+=	R-RcppArmadillo
 SUBDIR+=	R-RcppEigen
 SUBDIR+=	R-SparseM
+SUBDIR+=	R-StanHeaders
 SUBDIR+=	R-VGAM
 SUBDIR+=	R-XML
 SUBDIR+=	R-abind
