x11/py-Tk: Add the x11 option
FIXME: Does this package use x11 directly? Or, would depending on tk
suffice?

--- a/x11/py-Tk/Makefile
+++ b/x11/py-Tk/Makefile
@@ -30,6 +30,8 @@ PY_SETUP_SUBST+=	X11LIB=
 PY_SETUP_SUBST+=	X11LIB=\'X11\'
 .endif
 
+.include "options.mk"
+
 .include "../../lang/python/extension.mk"
 
 .if ${_PYTHON_VERSION} >= 27
