lang/julia: Update to 1.1.0

--- a/lang/julia/Makefile
+++ b/lang/julia/Makefile
@@ -1,18 +1,16 @@
 # $NetBSD$
 
-DISTNAME=	julia-1.0.0-full
-PKGNAME=	${DISTNAME:S/-full//}
+DISTNAME=	julia-1.1.0
 CATEGORIES=	lang
-MASTER_SITES=	https://github.com/JuliaLang/julia/releases/download/v1.0.0/
+MASTER_SITES=	https://github.com/JuliaLang/julia/releases/download/v1.1.0/
 
 MAINTAINER=	minskim@NetBSD.org
 HOMEPAGE=	https://julialang.org/
 COMMENT=	High-performance dynamic language for numerical computing
 LICENSE=	mit
 
-WRKSRC=		${WRKDIR}/${PKGBASE}
 USE_LANGUAGES=	c c++ fortran
-USE_TOOLS=	gmake perl
+USE_TOOLS=	awk gmake perl
 
 .include "../../www/http-parser/buildlink3.mk" # for libgit2
 
