math/py-tensorflow_estimator: Import 1.13.0

--- a/math/Makefile
+++ b/math/Makefile
@@ -357,6 +357,7 @@ SUBDIR+=	py-sympy
 SUBDIR+=	py-tables
 SUBDIR+=	py-tensorboard
 SUBDIR+=	py-tensorflow-bin
+SUBDIR+=	py-tensorflow_estimator
 SUBDIR+=	py-uncertainties
 SUBDIR+=	py-xarray
 SUBDIR+=	py-z3
